--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,7 +14,7 @@ body {
     background-color: var(--azul-claro);
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: auto;
     font-size: 14px;
     color: white;
     box-sizing: border-box;
@@ -100,9 +100,10 @@ body {
     font-size: 14px;
     width: 239px;
     height: auto;
-    overflow: scroll;
+    overflow-y: scroll;
     top: 80px;
     left: 0;
+    bottom: 0;
     position: fixed;
 }
 
@@ -113,6 +114,26 @@ body {
 .menu__itens:hover {
     background-color: var(--azul-medio);
     transition: .5s;
+}
+
+.videojuegos {
+    order: 4;
+
+}
+
+.peliculas{
+    order: 3;
+
+}
+
+.premium{
+    order: 2;
+
+}
+
+.maspagina {
+    order: 1;
+
 }
 
 .icono__inicio::before {
@@ -209,7 +230,7 @@ body {
 
 .superior__item {
     color: var(--gris-texto);
-    font-size: 12px;
+    font-size: 14px;
     background-color: white;
     border-radius: 20px;
     padding: 15px;
@@ -227,19 +248,33 @@ body {
 
 .videos__container {
     color: black;
-    padding: 153px 20px 10px 20px;
+    padding: 153px 20px 0 259px;
+    margin-bottom: 268px;
 }
 
-.videos__item:hover {
-    transform: scale(1.3);
+.videos__item {
+    width: 272px;
+    height: 239px;
+}
+
+
+/* .videos__item:hover {
+    transform: scale(1.1);
     background-color: var(--azul-claro);
     z-index: 2;
     transition: .5s;
+} */
+
+
+.detalles__video {
+    text-align:left;
+
 }
 
 .detalles__video h3 {
     font-weight: 700;
     color: #444444;
+    margin-bottom: 10px;
 }
 
 .detalles__video p {
