--- a/css/estilos.css
+++ b/css/estilos.css
@@ -99,7 +99,7 @@ body {
     background-color: var(--azul-oscuro);
     font-size: 14px;
     width: 239px;
-    height: auto;
+    height: 100%;
     overflow-y: scroll;
     top: 80px;
     left: 0;
